K8s/statfulset/consul/consul-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: consul-ingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`consul-test.test.com`) 
    kind: Rule
    services:
    - name: consul-svc
      port: 8500
      sticky:
        cookie: {}
